fixed mouseover layout bug on looks in search result

--- a/apparelrow/media/src/partials/_application.sass
+++ b/apparelrow/media/src/partials/_application.sass
@@ -1263,8 +1263,8 @@ a.block_link
       &#search-result-looks
         li
           width: 95px
-          height: 92px
-          line-height: 92px
+          height: 87px
+          line-height: 87px
           margin-right: 10px
           &.odd
             margin-right: 0px
